# book-network-ui/src/app/services/models/borrowed-book-response.ts
@@ -1,0 +1,12 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface BorrowedBookResponse {
+  authorName?: string;
+  id?: number;
+  isbn?: string;
+  rate?: number;
+  returned?: boolean;
+  returnedAproved?: boolean;
+  title?: string;
+}
