# book-network-ui/src/app/services/models/page-response-book-response.ts
@@ -1,0 +1,13 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { BookResponse } from '../models/book-response';
+export interface PageResponseBookResponse {
+  contet?: Array<BookResponse>;
+  first?: boolean;
+  last?: boolean;
+  number?: number;
+  size?: number;
+  totalElements?: number;
+  totalPages?: number;
+}
