# book-network-ui/src/app/services/models/page-response-borrowed-book-response.ts
@@ -1,0 +1,13 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { BorrowedBookResponse } from '../models/borrowed-book-response';
+export interface PageResponseBorrowedBookResponse {
+  contet?: Array<BorrowedBookResponse>;
+  first?: boolean;
+  last?: boolean;
+  number?: number;
+  size?: number;
+  totalElements?: number;
+  totalPages?: number;
+}
